<resources>

    <string name="app_name">Focused</string>
    <string name="login_screen">Iniciar sesión</string>
    <string name="lbl_copyright">Endbox 2019 ©</string>
    <string name="title_activity_login_google">Inicia sesión</string>
    <string name="btn_registrar">Regístrate</string>
    <string name="btn_registro">Ingresar con Google</string>
    <string name="title_activity_menu_drawer">MenuDrawer</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="nav_header_title">Victor Muñoz Fernandez</string>
    <string name="nav_header_subtitle">victor.munoz97@inacapmail.cl</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar sesión</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Mi perfil</string>
    <string name="menu_slideshow">Mis reservas</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Cerrar sesión</string>

    <string name="txt_title_card_view">Hermosa y relajante pieza. Temuco centro.</string>
    <string name="txt_room_features">Wifi  |  Proyector  |  1    </string>
    <string name="txt_room_description">Hermosa pieza ubicada en pleno centro de Temuco.
        Buena locomoción y sector tranquilo</string>
    <string name="btn_ver_mapa">Ver en el mapa</string>
    <string name="btn_agendar">Ver horario</string>
    <string name="txt_valor">Valor: $3800 / hora</string>

    <string name="txt_username">Username/Email</string>
    <string name="txt_pass">Contraseña</string>

    <string name="txt_iniciar_sesion">Iniciar sesión</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="txt_opcion_inicio_sesion">- - - - Ó - - - -</string>

    <string name="txt_user_desc">Estudiante   |   23 años</string>

    <string name="txt_user_loctn">Temuco, Chile</string>
    <string name="txt_user_edit">Editar mis datos</string>

    <string name="txt_desc_review">Temuco centro Casa muy tranquila</string>

    <string name="txt_valoracion">Valoración:</string>
    <string name="txt_resena_title">Reseña:</string>
    <string name="txt_resena">"Me encantó la sala; mucho silencio en todo momento, pude concentrarme sin ninguna distracción. Recomendado."</string>

    <string name="txt_date">27/06/2019</string>
    <string name="txt_registro">O regístrate</string>

    <string name="titulo_reservas_encurso">En curso </string>

    <string name="btn_contactar">Contacto</string>
    <string name="btn_cancelar_reserva">Cancelar reserva</string>


</resources>
