<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_slideshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/menu_slideshow"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_card_view"
        android:textAlignment="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_reservas_encurso"
            android:layout_gravity="start"
            android:layout_marginLeft="20dp"
            android:textFontWeight="20"
            android:textSize="22dp"
            android:textColor="@color/colorWhiteText">

        </TextView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="@color/colorBgGrey">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/colorBgGrey">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="20dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/imgCardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/room_5"></ImageView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_title_card_view"
                        android:textAlignment="center"
                        android:textFontWeight="20"
                        android:textSize="22dp">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/txt_room_features"
                        android:drawableRight="@drawable/user">
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:drawableRight="@drawable/star"
                        android:drawablePadding="60pt"
                        >
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:drawableRight="@drawable/star">
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:drawableRight="@drawable/star">
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:drawableRight="@drawable/star">
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp">

                    <TextView
                        android:id="@+id/txt_room_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_room_description"
                        android:textAlignment="center">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="65dp"
                    android:layout_marginRight="65dp"
                    android:textAlignment="center">

                    <Button
                        android:id="@+id/btnContacto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/btn_contactar"
                        android:textColor="@color/colorWhiteText"
                        android:backgroundTint="@color/colorButton2">

                    </Button>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btnCancelarReserva"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/btn_cancelar_reserva"
                        android:textColor="@color/colorWhiteText"
                        android:backgroundTint="@color/red">

                    </Button>
                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:cardBackgroundColor="@color/colorBgGrey">

                    <LinearLayout
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:background="@color/colorBgGrey">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_margin="20dp"
                            android:orientation="vertical">
                            <ImageView
                                android:id="@+id/imgCardView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/room_5"></ImageView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/txt_title_card_view"
                                android:textAlignment="center"
                                android:textFontWeight="20"
                                android:textSize="22dp">

                            </TextView>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:layout_marginLeft="15dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:text="@string/txt_room_features"
                                android:drawableRight="@drawable/user">
                            </TextView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:drawableRight="@drawable/star"
                                android:drawablePadding="60pt"
                                >
                            </TextView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:drawableRight="@drawable/star">
                            </TextView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:drawableRight="@drawable/star">
                            </TextView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:drawableRight="@drawable/star">
                            </TextView>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp">

                            <TextView
                                android:id="@+id/txt_room_description2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/txt_room_description"
                                android:textAlignment="center">

                            </TextView>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="65dp"
                            android:layout_marginRight="65dp"
                            android:textAlignment="center">

                            <Button
                                android:id="@+id/btnContacto2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:text="@string/btn_contactar"
                                android:textColor="@color/colorWhiteText"
                                android:backgroundTint="@color/colorButton2">

                            </Button>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:gravity="center">

                            <Button
                                android:id="@+id/btnCancelarReserva2"
                                android:layout_width="180dp"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:text="@string/btn_cancelar_reserva"
                                android:textColor="@color/colorWhiteText"
                                android:backgroundTint="@color/red">

                            </Button>
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>



        </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>